--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,17 @@
+annotated-types==0.7.0
+anyio==4.4.0
+assemblyai==0.33.0
 certifi==2024.8.30
 charset-normalizer==3.3.2
 contourpy==1.3.0
 cycler==0.12.1
+elevenlabs==1.8.1
 filelock==3.16.0
 fonttools==4.53.1
 fsspec==2024.9.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
 idna==3.9
 Jinja2==3.1.4
 kiwisolver==1.4.7
@@ -13,12 +20,16 @@ matplotlib==3.9.2
 mpmath==1.3.0
 networkx==3.3
 numpy==1.26.4
+ollama==0.3.3
 opencv-python==4.10.0.84
 packaging==24.1
 pandas==2.2.2
 pillow==10.4.0
 psutil==6.0.0
 py-cpuinfo==9.0.0
+PyAudio==0.2.14
+pydantic==2.9.1
+pydantic_core==2.23.3
 pyparsing==3.1.4
 python-dateutil==2.9.0.post0
 pytz==2024.2
@@ -28,6 +39,7 @@ scipy==1.14.1
 seaborn==0.13.2
 setuptools==72.1.0
 six==1.16.0
+sniffio==1.3.1
 sympy==1.13.2
 torch==2.2.2
 torchvision==0.17.2
@@ -37,4 +49,5 @@ tzdata==2024.1
 ultralytics==8.2.93
 ultralytics-thop==2.0.6
 urllib3==2.2.3
+websockets==13.0.1
 wheel==0.44.0
